// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`orders_refunds .all() should return a list of all order refunds 1`] = `
Array [
  Refund {
    "_embedded": null,
    "_links": Object {
      "documentation": Object {
        "href": "https://docs.mollie.com/reference/v2/refunds-api/get-refund",
        "type": "text/html",
      },
      "order": Object {
        "href": "https://api.mollie.com/v2/orders/ord_stTC2WHAuS",
        "type": "application/hal+json",
      },
      "payment": Object {
        "href": "https://api.mollie.com/v2/payments/tr_WDqYK6vllg",
        "type": "application/hal+json",
      },
      "self": Object {
        "href": "https://api.mollie.com/v2/payments/tr_WDqYK6vllg/refunds/re_4qqhO89gsT",
        "type": "application/hal+json",
      },
    },
    "amount": Object {
      "currency": "EUR",
      "value": "698.00",
    },
    "createdAt": "2018-03-14T17:09:02.0Z",
    "description": "Required quantity not in stock, refunding one photo book.",
    "id": "re_4qqhO89gsT",
    "lines": Array [
      Object {
        "_links": Object {
          "imageUrl": Object {
            "href": "https://sh-s7-live-s.legocdn.com/is/image//LEGO/42083_alt1?$main$",
            "type": "text/html",
          },
          "productUrl": Object {
            "href": "https://shop.lego.com/nl-NL/Bugatti-Chiron-42083",
            "type": "text/html",
          },
        },
        "createdAt": "2018-08-02T09:29:56+00:00",
        "discountAmount": Object {
          "currency": "EUR",
          "value": "100.00",
        },
        "id": "odl_dgtxyl",
        "name": "LEGO 42083 Bugatti Chiron",
        "orderId": "ord_stTC2WHAuS",
        "quantity": 1,
        "resource": "orderline",
        "sku": "5702016116977",
        "status": "paid",
        "totalAmount": Object {
          "currency": "EUR",
          "value": "299.00",
        },
        "type": "physical",
        "unitPrice": Object {
          "currency": "EUR",
          "value": "399.00",
        },
        "vatAmount": Object {
          "currency": "EUR",
          "value": "51.89",
        },
        "vatRate": "21.00",
      },
    ],
    "orderId": "ord_stTC2WHAuS",
    "paymentId": "tr_WDqYK6vllg",
    "resource": "refund",
    "settlementAmount": null,
    "status": "processing",
  },
]
`;

exports[`orders_refunds .all() should work with a Promise and with .withParent() 1`] = `
Array [
  Refund {
    "_embedded": null,
    "_links": Object {
      "documentation": Object {
        "href": "https://docs.mollie.com/reference/v2/refunds-api/get-refund",
        "type": "text/html",
      },
      "order": Object {
        "href": "https://api.mollie.com/v2/orders/ord_stTC2WHAuS",
        "type": "application/hal+json",
      },
      "payment": Object {
        "href": "https://api.mollie.com/v2/payments/tr_WDqYK6vllg",
        "type": "application/hal+json",
      },
      "self": Object {
        "href": "https://api.mollie.com/v2/payments/tr_WDqYK6vllg/refunds/re_4qqhO89gsT",
        "type": "application/hal+json",
      },
    },
    "amount": Object {
      "currency": "EUR",
      "value": "698.00",
    },
    "createdAt": "2018-03-14T17:09:02.0Z",
    "description": "Required quantity not in stock, refunding one photo book.",
    "id": "re_4qqhO89gsT",
    "lines": Array [
      Object {
        "_links": Object {
          "imageUrl": Object {
            "href": "https://sh-s7-live-s.legocdn.com/is/image//LEGO/42083_alt1?$main$",
            "type": "text/html",
          },
          "productUrl": Object {
            "href": "https://shop.lego.com/nl-NL/Bugatti-Chiron-42083",
            "type": "text/html",
          },
        },
        "createdAt": "2018-08-02T09:29:56+00:00",
        "discountAmount": Object {
          "currency": "EUR",
          "value": "100.00",
        },
        "id": "odl_dgtxyl",
        "name": "LEGO 42083 Bugatti Chiron",
        "orderId": "ord_stTC2WHAuS",
        "quantity": 1,
        "resource": "orderline",
        "sku": "5702016116977",
        "status": "paid",
        "totalAmount": Object {
          "currency": "EUR",
          "value": "299.00",
        },
        "type": "physical",
        "unitPrice": Object {
          "currency": "EUR",
          "value": "399.00",
        },
        "vatAmount": Object {
          "currency": "EUR",
          "value": "51.89",
        },
        "vatRate": "21.00",
      },
    ],
    "orderId": "ord_stTC2WHAuS",
    "paymentId": "tr_WDqYK6vllg",
    "resource": "refund",
    "settlementAmount": null,
    "status": "processing",
  },
]
`;

exports[`orders_refunds .all() should work with a callback 1`] = `
Array [
  Refund {
    "_embedded": null,
    "_links": Object {
      "documentation": Object {
        "href": "https://docs.mollie.com/reference/v2/refunds-api/get-refund",
        "type": "text/html",
      },
      "order": Object {
        "href": "https://api.mollie.com/v2/orders/ord_stTC2WHAuS",
        "type": "application/hal+json",
      },
      "payment": Object {
        "href": "https://api.mollie.com/v2/payments/tr_WDqYK6vllg",
        "type": "application/hal+json",
      },
      "self": Object {
        "href": "https://api.mollie.com/v2/payments/tr_WDqYK6vllg/refunds/re_4qqhO89gsT",
        "type": "application/hal+json",
      },
    },
    "amount": Object {
      "currency": "EUR",
      "value": "698.00",
    },
    "createdAt": "2018-03-14T17:09:02.0Z",
    "description": "Required quantity not in stock, refunding one photo book.",
    "id": "re_4qqhO89gsT",
    "lines": Array [
      Object {
        "_links": Object {
          "imageUrl": Object {
            "href": "https://sh-s7-live-s.legocdn.com/is/image//LEGO/42083_alt1?$main$",
            "type": "text/html",
          },
          "productUrl": Object {
            "href": "https://shop.lego.com/nl-NL/Bugatti-Chiron-42083",
            "type": "text/html",
          },
        },
        "createdAt": "2018-08-02T09:29:56+00:00",
        "discountAmount": Object {
          "currency": "EUR",
          "value": "100.00",
        },
        "id": "odl_dgtxyl",
        "name": "LEGO 42083 Bugatti Chiron",
        "orderId": "ord_stTC2WHAuS",
        "quantity": 1,
        "resource": "orderline",
        "sku": "5702016116977",
        "status": "paid",
        "totalAmount": Object {
          "currency": "EUR",
          "value": "299.00",
        },
        "type": "physical",
        "unitPrice": Object {
          "currency": "EUR",
          "value": "399.00",
        },
        "vatAmount": Object {
          "currency": "EUR",
          "value": "51.89",
        },
        "vatRate": "21.00",
      },
    ],
    "orderId": "ord_stTC2WHAuS",
    "paymentId": "tr_WDqYK6vllg",
    "resource": "refund",
    "settlementAmount": null,
    "status": "processing",
  },
]
`;

exports[`orders_refunds .create() should return a refund instance 1`] = `
Refund {
  "_embedded": null,
  "_links": Object {
    "documentation": Object {
      "href": "https://docs.mollie.com/reference/v2/refunds-api/get-refund",
      "type": "text/html",
    },
    "order": Object {
      "href": "https://api.mollie.com/v2/orders/ord_stTC2WHAuS",
      "type": "application/hal+json",
    },
    "payment": Object {
      "href": "https://api.mollie.com/v2/payments/tr_WDqYK6vllg",
      "type": "application/hal+json",
    },
    "self": Object {
      "href": "https://api.mollie.com/v2/payments/tr_WDqYK6vllg/refunds/re_4qqhO89gsT",
      "type": "application/hal+json",
    },
  },
  "amount": Object {
    "currency": "EUR",
    "value": "698.00",
  },
  "createdAt": "2018-03-14T17:09:02.0Z",
  "description": "Required quantity not in stock, refunding one photo book.",
  "id": "re_4qqhO89gsT",
  "lines": Array [
    Object {
      "_links": Object {
        "imageUrl": Object {
          "href": "https://sh-s7-live-s.legocdn.com/is/image//LEGO/42083_alt1?$main$",
          "type": "text/html",
        },
        "productUrl": Object {
          "href": "https://shop.lego.com/nl-NL/Bugatti-Chiron-42083",
          "type": "text/html",
        },
      },
      "createdAt": "2018-08-02T09:29:56+00:00",
      "discountAmount": Object {
        "currency": "EUR",
        "value": "100.00",
      },
      "id": "odl_dgtxyl",
      "name": "LEGO 42083 Bugatti Chiron",
      "orderId": "ord_stTC2WHAuS",
      "quantity": 1,
      "resource": "orderline",
      "sku": "5702016116977",
      "status": "paid",
      "totalAmount": Object {
        "currency": "EUR",
        "value": "299.00",
      },
      "type": "physical",
      "unitPrice": Object {
        "currency": "EUR",
        "value": "399.00",
      },
      "vatAmount": Object {
        "currency": "EUR",
        "value": "51.89",
      },
      "vatRate": "21.00",
    },
  ],
  "orderId": "ord_stTC2WHAuS",
  "paymentId": "tr_WDqYK6vllg",
  "resource": "refund",
  "settlementAmount": null,
  "status": "processing",
}
`;

exports[`orders_refunds .create() should work with a callback 1`] = `
Refund {
  "_embedded": null,
  "_links": Object {
    "documentation": Object {
      "href": "https://docs.mollie.com/reference/v2/refunds-api/get-refund",
      "type": "text/html",
    },
    "order": Object {
      "href": "https://api.mollie.com/v2/orders/ord_stTC2WHAuS",
      "type": "application/hal+json",
    },
    "payment": Object {
      "href": "https://api.mollie.com/v2/payments/tr_WDqYK6vllg",
      "type": "application/hal+json",
    },
    "self": Object {
      "href": "https://api.mollie.com/v2/payments/tr_WDqYK6vllg/refunds/re_4qqhO89gsT",
      "type": "application/hal+json",
    },
  },
  "amount": Object {
    "currency": "EUR",
    "value": "698.00",
  },
  "createdAt": "2018-03-14T17:09:02.0Z",
  "description": "Required quantity not in stock, refunding one photo book.",
  "id": "re_4qqhO89gsT",
  "lines": Array [
    Object {
      "_links": Object {
        "imageUrl": Object {
          "href": "https://sh-s7-live-s.legocdn.com/is/image//LEGO/42083_alt1?$main$",
          "type": "text/html",
        },
        "productUrl": Object {
          "href": "https://shop.lego.com/nl-NL/Bugatti-Chiron-42083",
          "type": "text/html",
        },
      },
      "createdAt": "2018-08-02T09:29:56+00:00",
      "discountAmount": Object {
        "currency": "EUR",
        "value": "100.00",
      },
      "id": "odl_dgtxyl",
      "name": "LEGO 42083 Bugatti Chiron",
      "orderId": "ord_stTC2WHAuS",
      "quantity": 1,
      "resource": "orderline",
      "sku": "5702016116977",
      "status": "paid",
      "totalAmount": Object {
        "currency": "EUR",
        "value": "299.00",
      },
      "type": "physical",
      "unitPrice": Object {
        "currency": "EUR",
        "value": "399.00",
      },
      "vatAmount": Object {
        "currency": "EUR",
        "value": "51.89",
      },
      "vatRate": "21.00",
    },
  ],
  "orderId": "ord_stTC2WHAuS",
  "paymentId": "tr_WDqYK6vllg",
  "resource": "refund",
  "settlementAmount": null,
  "status": "processing",
}
`;
